Text Styling Demo

--- a/demos/03-paragraphs/index.html
+++ b/demos/03-paragraphs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,5 +14,12 @@
             mollitia dicta sed animi magnam officia numquam quibusdam
             dignissimos, minus, temporibus optio.
         </p>
+        <h1><b>This is my header bold</h1></b>
+        This is not a bold sentence.
+        <b>This is a bold sentence in a line.</b>
+        <b>
+            This is also bold.
+        </b>
+        This is not bold.
     </body>
 </html>
