--- a/demos/04-text-styling-elements/index.html
+++ b/demos/04-text-styling-elements/index.html
@@ -15,7 +15,10 @@
             This text is also bold.
         </b>
 
+        <br>
+        <br>
         <hr>
+        <br>
         
         This text is not italicized. 
 
@@ -25,7 +28,10 @@
             This text is also italicized.
         </i>
 
+        <br>
+        <br>
         <hr>
+        <br>
 
         This text is not superscript.
 
@@ -35,7 +41,10 @@
             This text is also superscript.
         </sup>
 
+        <br>
+        <br>
         <hr>
+        <br>
 
         This text is not subscript.
 
@@ -45,13 +54,28 @@
             This text is also subscript.
         </sub>
 
+        <br>
+        <br>
         <hr>
+        <br>
 
         Equations with superscript.
         <br>
          X<sup>2</sup>
-        + Y<sup>2</sup> = Z<sup>2</sup>
+         + Y<sup>2</sup> = Z<sup>2</sup>
 
-        
+        <br>
+        <br>
+        <hr>
+        <br>
+
+        Equations with subscript.
+        <br>
+         C<sub>6</sub>H<sub>12</sub>O<sub>6</sub>
+
+        <br>
+        <br>
+        <hr>
+        <br>
     </body>
 </html>
