First Exercise Update
Random Fact Sheet

--- a/exercises/random-fact-sheet/index.html
+++ b/exercises/random-fact-sheet/index.html
@@ -15,8 +15,11 @@
         <b>Name:</b> Chloe Kistler
         <br>
         <br>
-        <b>Hobbies:</b> <i>Reading, writing, thrifting, designing
-            and video games</i>
+        <b>Hobbies:</b> 
+        <i>
+            Reading, writing, thrifting, designing
+            and video games
+        </i>
         <br>
         <br>
         <hr>
@@ -24,11 +27,28 @@
 
         <h4><b>Slope Formula:</h4></b>
 
-        m =(y<sub>2</sub> - y<sub>1</sub>) / (x<sub>2</sub> - x<sub>1</sub>)
+        m =(y
+        <sub>2</sub>
+        - y
+        <sub>1</sub>
+        ) / (x
+        <sub>2</sub> 
+        - x
+        <sub>1</sub>)
+
         <h4>Distance Formula:</h4>
 
-        d = sqrt ( (x<sub>2</sub> - x<sub>1</sub>)<sup>2</sup> + (y<sub>2</sub>
-        - y<sub>1</sub>)<sup>2</sup> )
+        d = sqrt ( (x
+        <sub>2</sub> 
+        - x
+        <sub>1</sub>
+        )
+        <sup>2</sup>
+        + (y
+        <sub>2</sub>
+        - y
+        <sub>1</sub>)
+        <sup>2</sup> )
 
         <br>
         <br>
@@ -58,11 +78,15 @@
 
         <h4><b>Three facts about Dogs:</h4></b>
         <ul>
-            <li>Dogs were used to treat spinal cord injuries wiith cell 
-                transplants.</li>
+            <li>
+                Dogs were used to treat spinal cord injuries wiith cell 
+                transplants.
+            </li>
             <li>Dog's urine can carode metal</li>
-            <li>Studies on dogs led to the conception of the first 
-                pacemaker.</li>
-         </ul>
+            <li>
+                Studies on dogs led to the conception of the first 
+                pacemaker.
+            </li>
+        </ul>
     </body>
 </html>
