--- a/exercises/recipe-page/index.html
+++ b/exercises/recipe-page/index.html
@@ -168,7 +168,10 @@
 
         <p>
             <b>Source Recipe:</b>
-            <a href="anchors-external.html">
+            <a 
+                href="https://moribyan.com/rabokki-korean-rice-cakes-and-ramen/"
+                target="_blank"
+            >
                 https://moribyan.com/rabokki-korean-rice-cakes-and-ramen/
             </a>
         </p>
