wikie-page-update

--- a/projects/wiki-page/index.html
+++ b/projects/wiki-page/index.html
@@ -11,7 +11,7 @@
 
         <h4>From Wikipedia, the free encyclopedia</h4>
 
-        <i>For the album by Trash Boat, see Crown Shyness (album).</i>
+        <i>&nbsp; For the album by Trash Boat, see Crown Shyness (album).</i>
 
         <p>
             <b>Crown Shyness</b>
