--- a/projects/wiki-page/index.html
+++ b/projects/wiki-page/index.html
@@ -13,7 +13,8 @@
 
         <h4>From Wikipedia, the free encyclopedia</h4>
         <p>
-            <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <i>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 For the album by Trash Boat, see Crown Shyness (album).
             </i>
         </p>
