--- a/projects/wiki-page/index.html
+++ b/projects/wiki-page/index.html
@@ -161,5 +161,60 @@
         <h2>Species</h2>
 
         <hr>
+
+        <img
+            src="images/crownshyness2.jpg"
+            alt="vertical view of a different species of crown shyness"
+            width="250"
+        >
+        <h4>Trees that display crown shyness patterns include:</h4>
+
+        <ul>
+            <li>
+                Species of 
+                <i>Dryobalanops,</i>
+                including
+                <i>Dryobalanops lanceolata</i>
+                <sup>[22]</sup>
+                and
+                <i>Dryobalanops aromatica</i>
+                (kapur)
+            </li>
+            <li>
+                Some species of eucalypt
+                <sup>[23]</sup>
+            </li>
+            <li>
+                <i>Pinus contorta</i>
+                or lodgepole pine
+                <sup>[1]</sup>
+            </li>
+            <li>
+                <i>Avicennia germinans</i>
+                or black mangrove
+                <sup>[3]</sup>
+            </li>
+            <li>
+                <i>Schefflera</i>
+                pittieri
+                <sup>[6][12]</sup>
+            </li>
+            <li>
+                <i>Clusia alata</i>
+                <sup>[6][12]</sup>
+            </li>
+            <li>
+                K. Paijmans observed crown shyness in a multi-species group
+                of trees, comprising 
+                <i>Celtis spinosa</i>
+                and
+                <i>Pterocymbium beccarii</i>
+                <sup>[7]</sup>
+            </li>
+        </ul>
+        
+        <h2>References</h2>
+
+        <hr>
     </body>
 </html>
