--- a/exercises/adventure/choice5.html
+++ b/exercises/adventure/choice5.html
@@ -13,9 +13,9 @@
         <h3>The Story</h3>
 
         <p>
-            You use the torch to continue on your path. You find yourself 
-            walking for what seems like eternity until you see something. What
-            is that? It's a ladder. What do you do?
+            As you climb and climb and climb, you start to hear noises. You
+            reach the end of the ladder and find a set of stairs. You can 
+            hear voices from the top of them. What do you do?
         </p>
 
          <h3>Choice 1:</h3>
