Adventure Exercise update

--- a/exercises/adventure/choice-4-end.html
+++ b/exercises/adventure/choice-4-end.html
@@ -12,8 +12,9 @@
         <hr>
         <h3>The Story</h3>
         <p>
-            Bad choice! You couldn't see and something grabbed you! You
-            are now lost in the tunnel forever...
+            Oh no! You decided to keep walking and now your torch has run out!
+            You are forced to walk in the dark and now you will be lost in the 
+            well forever...
         </p>
 
         <img
