--- a/exercises/adventure/choice5.html
+++ b/exercises/adventure/choice5.html
@@ -21,7 +21,7 @@
          <h3>Choice 1:</h3>
 
         <img 
-            src="images/ladderwell.jpeg"
+            src="images/stairsintunnel.jpg"
             alt="ladder inside of a well"
             width="350"
         >
@@ -30,22 +30,22 @@
             href="choice5.html"
         >
             <br>
-            Climb the ladder
+            Take the stairs
         </a>
 
         <h3>Choice 2:</h3>
 
         <img
-            src="images/darktunnel.jpeg"
+            src="images/ladderwell.jpeg"
             alt="secret tunnel in a well"
             width="350"
         >
 
         <a
-            href="choice-4-end.html"
+            href="choice-5-end.html"
         >
             <br>
-            Just keep walking
+            Go back down the ladder
         </a>
     </body>
 </html>
