html-potluck update

--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -14,11 +14,27 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>The Cookbook</h1>
+        <h1 id="top">The Cookbook</h1>
+
+        <h3>Table of Contents</h3>
+
+        <ul>
+            <li>
+                <a href="#chkn-ceasar-tacos">Chicken Ceasar Smash Tacos</a>
+            </li>
+            <li>
+                <a href="#fluffy-diner-pncks">Fluffy Diner Pancakes</a>
+            </li>
+            <li>
+                <a href="#best-mac-n-chz">The Best Mac and Cheese</a>
+            </li>
+        </ul>
+
+        <br>
 
         <hr>
 
-        <h2>Chicken Ceasar Smash Tacos</h2>
+        <h2 id="chkn-ceasar-tacos">Chicken Ceasar Smash Tacos</h2>
 
         <img
             src="images/ceasartacos.webp"
@@ -168,10 +184,13 @@
             </li>
         </ol>
 
-        <br>
+        <a href="#top">Back to Top</a>
+
+        <br><br><br><br><br><br><br><br><br>
+
         <hr>
 
-        <h2>Fluffy Diner Pancakes</h2>
+        <h2 id="fluffy-diner-pncks">Fluffy Diner Pancakes</h2>
 
         <img
             src="images/pancakes.webp"
@@ -280,12 +299,13 @@
                 Enjoy warm.
             </li>
         </ol>
+        <a href="#top">Back to Top</a>
 
-        <br>
+        <br><br><br><br><br><br><br><br><br>
 
         <hr>
 
-        <h2>The Best Mac and Cheese</h2>
+        <h2 id="best-mac-n-chz">The Best Mac and Cheese</h2>
 
         <img
             src="images/macnchz.webp"
@@ -406,7 +426,9 @@
             </li>
         </ol>
 
-        <br><br>
+        <a href="#top">Back to Top</a>
+
+        <br><br><br>
 
     </body>
 </html>
