move-potluck-update

--- a/projects/html-potluck/movie-showcase.html
+++ b/projects/html-potluck/movie-showcase.html
@@ -73,14 +73,16 @@
         </h4>
 
         <img
-            src="images/darkknightposter.jpg"
-            height="400"
+            src="images/thedarknight2.jpg"
+            width="400"
             alt="the dark knight movie poster"
         >
 
         <p>
             <b>Runtime:</b>
             2hr 32min
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <b>Rating:</b>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -103,6 +105,8 @@
             line between heroism and vigilantism.
         </p>
 
+        <a href="#top">Back to Top</a>
+
         <br><br>
 
         <hr>
@@ -117,14 +121,16 @@
         </h4>
 
         <img
-            src="images/theprincessbride.webp"
-            height="400"
+            src="images/princessbride2.jpg"
+            width="400"
             alt="the princess bride movie poster"
         >
 
         <p>
             <b>Runtime:</b>
             1hr 38min
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <b>Rating:</b>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -143,6 +149,8 @@
             novel "The Princess Bride" which earned its own loyal audience.
         </p>
 
+        <a href="#top">Back to Top</a>
+
         <br><br>
 
         <hr>
@@ -157,14 +165,16 @@
         </h4>
 
         <img
-            src="images/arrivalposter.jpg"
-            height="400"
+            src="images/arrival2.jpg"
+            width="400"
             alt="Arrival movie poster"
         >
 
         <p>
             <b>Runtime:</b>
             1hr 56min
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <b>Rating:</b>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -185,6 +195,8 @@
             life and quite possibly all of mankind.
         </p>
 
+        <a href="#top">Back to Top</a>
+
         <br><br>
 
         <hr>
@@ -199,14 +211,16 @@
         </h4>
 
         <img
-            src="images/stepbrothersposter.jpg"
-            height="400"
+            src="images/stepbrothers2.jpg"
+            width="400"
             alt="step brothers movie poster"
         >
 
         <p>
             <b>Runtime:</b>
             1hr 35min
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <b>Rating:</b>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -227,6 +241,8 @@
             parents.
         </p>
 
+        <a href="#top">Back to Top</a>
+
         <br><br>
 
         <hr>
@@ -241,14 +257,16 @@
         </h4>
 
         <img
-            src="images/insideoutposter.jpg"
-            height="400"
+            src="images/insideout2.webp"
+            width="400"
             alt="inside out movie poster"
         >
 
         <p>
             <b>Runtime:</b>
             1hr 35min
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <b>Rating:</b>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -269,6 +287,8 @@
             inadvertently swept into the far reaches of Riley's mind, the only 
             emotions left in Headquarters are Anger, Fear and Disgust.
         </p>
+
+        <a href="#top">Back to Top</a>
 
         <br><br>
 
