playlist-html-update

--- a/projects/html-potluck/playlists.html
+++ b/projects/html-potluck/playlists.html
@@ -151,7 +151,10 @@
 
         <hr>
 
-        <h1>Chill Playlist</h1>
+        <h1>
+            <i class="fa-solid fa-mug-hot"></i>
+            Chill Playlist
+        </h1>
 
         <hr>
 
@@ -170,12 +173,50 @@
         >
 
         <br>
+        <p>
+            <i class="fa-solid fa-circle-play"></i>
+            <b>Do You Remember-</b>
+            <i>Jack Johnson</i>
+        </p>
+
+        <br>
+
+        <h3>Next Up:</h3>
+
+        <img
+            src="images/stickseason.png"
+            width="75"
+            alt="stick season- noah kahan album cover"
+        >
+        <i class="fa-solid fa-circle-play"></i>
+        <b>Strawberry Wine-</b>
+        <i>Noah Kahan- 4:46</i>
+        
+        <br>
+
+        <img
+            src="images/patience.jpg"
+            width="75"
+            alt="patience-the lumineers song cover"
+        >
 
         <i class="fa-solid fa-circle-play"></i>
+        <b>Patience-</b>
+        <i>The Lumineers- 1:37</i>
+
+        <br>
+
+        <img
+            src="images/boniver.jpeg"
+            width="75"
+            alt="flume-bon iver song cover"
+        >
+
+        <i class="fa-solid fa-circle-play"></i>
+        <b>Flume-</b>
+        <i>Bon Iver- 3:39</i>
+
+        <br><br>
         
-
-
-
-
     </body>
 </html>
