--- a/projects/html-potluck/playlists.html
+++ b/projects/html-potluck/playlists.html
@@ -34,7 +34,7 @@
 
         <img
             src="images/doechii.jpeg"
-            width="300"
+            width="550"
             alt="doechii- nissan altima cover"
         >
 
@@ -55,7 +55,10 @@
         >
         <i class="fa-solid fa-circle-play"></i>
         <b>Pursuit of Happiness</b>
-        <i>Kid Cudi-4:50</i>
+        &nbsp;
+        <i>Kid Cudi-</i>
+        &nbsp;
+        4:50
 
         <br>
         <img
@@ -65,22 +68,30 @@
         >
         <i class="fa-solid fa-circle-play"></i>
         <b>Rules</b>
-        <i>Doja Cat-3:07</i>
+        &nbsp;
+        <i>Doja Cat-</i>
+        &nbsp;
+        3:07
 
         <br>
 
         <img
             src="images/foofighters.jpg"
             width="75"
+            alt="everything- foo fighters album cover"
         >
         <i class="fa-solid fa-circle-play"></i>
         <b>Everything</b>
-        <i>Foo Fighters- 4:59</i>
+        &nbsp;
+        <i>Foo Fighters-</i>
+        &nbsp;
+        4:49
+        <!-- Workout Playlist End -->
 
         <br><br><br><br><br><br><br>
 
         <hr>
-
+        <!-- Summer Playlist Beginning -->
         <h1>
             <i class="fa-solid fa-umbrella-beach"></i>
             Summer Playlist
@@ -100,7 +111,7 @@
 
         <img
             src="images/cagetheelephant.jpg"
-            width="300"
+            width="550"
             alt="cage the elephant album cover"
         >
 
@@ -121,7 +132,10 @@
         >
         <i class="fa-solid fa-circle-play"></i>
         <b>Lost Cause</b>
-        <i>Billie Eilish- 3:32</i>
+        &nbsp;
+        <i>Billie Eilish-</i>
+        &nbsp;
+        3:32
 
         <br>
 
@@ -133,7 +147,10 @@
 
         <i class="fa-solid fa-circle-play"></i>
         <b>Dog Days Are Over</b>
-        <i>Florence and the Machine- 4:19</i>
+        &nbsp;
+        <i>Florence and the Machine-</i>
+        &nbsp;
+        4:19
 
         <br>
 
@@ -145,12 +162,17 @@
 
         <i class="fa-solid fa-circle-play"></i>
         <b>California Waiting</b>
-        <i>Kings of Leon- 3:29</i>
+        &nbsp;
+        <i>Kings of Leon-</i>
+        &nbsp;
+        3:29
+
+        <!-- Summer Playlist End -->
 
         <br><br><br><br><br><br><br>
 
         <hr>
-
+        <!-- Chill Playlist Beginning -->
         <h1>
             <i class="fa-solid fa-mug-hot"></i>
             Chill Playlist
@@ -168,7 +190,7 @@
 
         <img
             src="images/jackjohnson.jpg"
-            width="300"
+            width="550"
             alt="jack johns in between dreams album cover"
         >
 
@@ -189,8 +211,11 @@
             alt="stick season- noah kahan album cover"
         >
         <i class="fa-solid fa-circle-play"></i>
-        <b>Strawberry Wine-</b>
-        <i>Noah Kahan- 4:46</i>
+        <b>Strawberry Wine</b>
+        &nbsp;
+        <i>Noah Kahan-</i>
+        &nbsp;
+        4:46
         
         <br>
 
@@ -201,8 +226,11 @@
         >
 
         <i class="fa-solid fa-circle-play"></i>
-        <b>Patience-</b>
-        <i>The Lumineers- 1:37</i>
+        <b>Patience</b>
+        &nbsp;
+        <i>The Lumineers-</i>
+        &nbsp;
+        1:37
 
         <br>
 
@@ -213,8 +241,13 @@
         >
 
         <i class="fa-solid fa-circle-play"></i>
-        <b>Flume-</b>
-        <i>Bon Iver- 3:39</i>
+        <b>Flume</b>
+        &nbsp;
+        <i>Bon Iver-</i>
+        &nbsp;
+        3:39
+
+        <!-- Chill Playlist End -->
 
         <br><br>
 
