html-potluck-update

--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
 
-        <h1> Weclcome to my Potluck!</h1>
+        <h1 id="top"> Weclcome to my Potluck!</h1>
 
         <hr>
 
@@ -26,9 +26,9 @@
 
         <br>
         <!-- Cookbook Page -->
-        <h4>
+        <h3>
             Want to make the best meals for your next potluck?
-        </h4>
+        </h3>
 
         <p>
             Well visit my cookbook and I will help you find the perfect
@@ -53,13 +53,13 @@
 
         <!-- Movie Showcase Page -->
 
-        <h4>Need a movie or two for the night?</h4>
+        <h3>Need a movie or two for the night?</h3>
 
         <p>Don't worry we have the best lineup for every watcher!</p>
 
         <a href="movie-showcase.html">
             <img
-                src="images/movienight.png"
+                src="images/movienight3.jpg"
                 width="500"
                 alt="movie night poster"
             >
@@ -73,16 +73,15 @@
 
         <!-- Music Playlist Page -->
 
-        <h4>Can't think of songs to get the party going?</h4>
+        <h3>Can't think of songs to get the party going?</h3>
 
         <p>
-            We told you have EVERYTHING! Check out some of our favorite 
-            playlists
+            We told you have EVERYTHING! Check out some of our favorites
         </p>
 
         <a href="playlists.html">
             <img
-                src="images/musicplaylist.jpeg"
+                src="images/musicplaylist2.webp"
                 width="500"
                 alt="music playlist cover illustration"
             >
@@ -91,6 +90,12 @@
         <br>
 
         <a href="playlists.html">Checkout My Playlists!</a>
+
+        <br><br><br>
+
+        <a href="#top">Back to Top</a>
+
+        <br><br>
 
     </body>
 </html>
