--- a/projects/html-potluck/cookbook.html
+++ b/projects/html-potluck/cookbook.html
@@ -428,6 +428,10 @@
 
         <a href="#top">Back to Top</a>
 
+        <br><br>
+
+        <a href="index.html#top">Back to Home</a>
+
         <br><br><br>
 
     </body>
