--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -76,7 +76,7 @@
         <h3>Can't think of songs to get the party going?</h3>
 
         <p>
-            We told you have EVERYTHING! Check out some of our favorites
+            We told you, we have EVERYTHING! Check out some of our favorites
         </p>
 
         <a href="playlists.html">
