html-potluck-update

--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -67,7 +67,7 @@
 
         <br>
 
-        <a href="movie-showcase.html">A Guide to the PERFECT movie night!</a>
+        <a href="movie-showcase.html">View the Guide to the PERFECT movie night!</a>
 
         <br><br><br><br><br><br><br><br>
 
