--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -67,7 +67,9 @@
 
         <br>
 
-        <a href="movie-showcase.html">View the Guide to the PERFECT movie night!</a>
+        <a href="movie-showcase.html">
+            View the Guide to the PERFECT movie night!
+        </a>
 
         <br><br><br><br><br><br><br><br>
 
