--- a/exercises/technicolor-lorem-ipsum/index.html
+++ b/exercises/technicolor-lorem-ipsum/index.html
@@ -82,5 +82,35 @@
             </span>
         </p>
 
+        <p id="paragraph-6">
+            <span id="span-21">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            </span>
+            <span id="span-22">
+                Atque perspiciatis dignissimos dolores impedit expedita labore
+            </span>
+            <span id="span-23">
+                neque ipsam magnam aspernatur rem. Soluta laudantium nesciunt
+            </span>
+            <span id="span-24">
+                voluptates, aut consectetur consequatur eum temporibus dolorem.
+            </span>
+        </p>
+
+        <p id="paragraph-7">
+            <span id="span-25">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            </span>
+            <span id="span-26">
+                Atque perspiciatis dignissimos dolores impedit expedita labore
+            </span>
+            <span id="span-27">
+                neque ipsam magnam aspernatur rem. Soluta laudantium nesciunt
+            </span>
+            <span id="span-28">
+                voluptates, aut consectetur consequatur eum temporibus dolorem.
+            </span>
+        </p>
+
     </body>
 </html>
