--- a/exercises/technicolor-lorem-ipsum/index.html
+++ b/exercises/technicolor-lorem-ipsum/index.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <!-- red-line -->
         <p id="paragraph-1">
             <span id="span-1">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
@@ -21,7 +22,7 @@
                 voluptates, aut consectetur consequatur eum temporibus dolorem.
             </span>
         </p>
-
+        <!-- orange-line -->
         <p id="paragraph-2">
             <span id="span-5">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
@@ -36,7 +37,7 @@
                 voluptates, aut consectetur consequatur eum temporibus dolorem.
             </span>
         </p>
-
+        <!-- yellow-line -->
         <p id="paragraph-3">
             <span id="span-9">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -51,7 +52,7 @@
                 voluptates, aut consectetur consequatur eum temporibus dolorem.
             </span>
         </p>
-
+        <!-- green-line -->
         <p id="paragraph-4">
             <span id="span-13">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -66,7 +67,7 @@
                 voluptates, aut consectetur consequatur eum temporibus dolorem.
             </span>
         </p>
-
+        <!-- blue-light -->
         <p id="paragraph-5">
             <span id="span-17">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -81,7 +82,7 @@
                 voluptates, aut consectetur consequatur eum temporibus dolorem.
             </span>
         </p>
-
+        <!-- indigo-line -->
         <p id="paragraph-6">
             <span id="span-21">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -96,7 +97,7 @@
                 voluptates, aut consectetur consequatur eum temporibus dolorem.
             </span>
         </p>
-
+        <!-- violet-line -->
         <p id="paragraph-7">
             <span id="span-25">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -109,6 +110,36 @@
             </span>
             <span id="span-28">
                 voluptates, aut consectetur consequatur eum temporibus dolorem.
+            </span>
+        </p>
+
+        <p>
+            <span id="span-29">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            </span>
+            <span id="span-30">
+            eaque perferendis totam mollitia provident voluptas officia ex
+            </span>
+            <span id="span-31"> 
+            nostrum alias beatae in aspernatur eos dolorum porro asperiores,
+            </span>
+            <span id="span-32"> 
+            atque distinctio. Tempore, aperiam.
+            </span>
+        </p>
+
+        <p>
+            <span id="span-33">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga
+            </span>
+            <span id="span-34">
+            eaque perferendis totam mollitia provident voluptas officia ex
+            </span>
+            <span id="span-35"> 
+            nostrum alias beatae in aspernatur eos dolorum porro asperiores,
+            </span>
+            <span id="span-36"> 
+            atque distinctio. Tempore, aperiam.
             </span>
         </p>
 
