floating-palette-update

--- a/exercises/floating-color-palette/index.html
+++ b/exercises/floating-color-palette/index.html
@@ -6,7 +6,7 @@
         <title>Floating Color Palettes Exercise</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
-    <body id="body-color">
+    <body>
         
         <div class="color-palette">
             <h2>Fall Leaves</h2>
