--- a/exercises/upside-down-tetris/index.html
+++ b/exercises/upside-down-tetris/index.html
@@ -10,40 +10,54 @@
         <div id="container">
             <div class="block red"></div>
             <div class="block red"></div>
-            <div class="block red"></div>
+            <div class="block empty"></div>
             <div class="block purple"></div>
             <div class="block purple"></div>
             <div class="block green"></div>
             <div class="block blue"></div>
             <div class="block blue"></div>
-            <div class="block blue"></div>
+            <div class="block empty"></div>
             <div class="block purple"></div>
             <div class="block green"></div>
             <div class="block empty"></div>
             <div class="block blue"></div>
-            <div class="block empty"></div>
+            <div class="block blue"></div>
             <div class="block purple"></div>
             <div class="block green"></div>
             <div class="block green"></div>
             <div class="block yellow"></div>
             <div class="block empty"></div>
-            <div class="block red"></div>
+            <div class="block empty"></div>
             <div class="block purple"></div>
             <div class="block purple"></div>
             <div class="block yellow"></div>
             <div class="block yellow"></div>
-            <div class="block red"></div>
+            <div class="block empty"></div>
             <div class="block purple"></div>
             <div class="block empty"></div>
             <div class="block empty"></div>
             <div class="block red"></div>
             <div class="block red"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block red"></div>
+            <div class="block empty"></div>
+            <div class="block green"></div>
+            <div class="block green"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block green"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
+            <div class="block green"></div>
+            <div class="block empty"></div>
+            <div class="block empty"></div>
         </div>
     </body>
 </html>
