--- a/projects/bulletin-board/index.html
+++ b/projects/bulletin-board/index.html
@@ -11,7 +11,9 @@
         <div id="bulletin-board">
             <!-- ADD YOUR HTML CODE INSIDE OF THIS DIV -->
             <div class="post-it yellow" id="groceries">
-                <div class="thumbnail"></div>
+                <div class="center">
+                    <div class="thumbnail"></div>
+                </div>
                 <h3>Groceries:</h3>
                 <ul>
                     <li>Milk</li>
