--- a/projects/bulletin-board/index.html
+++ b/projects/bulletin-board/index.html
@@ -24,6 +24,9 @@
             </div>
 
             <div class="post-it blue">
+                <div class="center">
+                    <div class="thumbnail"></div>
+                </div>
                 <h3>Note to Self!!</h3>
                 <p>Pay the phone bill by the 10th!!</p>
             </div>
@@ -37,6 +40,9 @@
             </div>
 
             <div class="post-it green" id="week-list">
+                <div class="center">
+                    <div class="thumbnail"></div>
+                </div>
                 <h3>Things to do this week:</h3>
                 <ul>
                     <li>Take dog to the vet</li>
@@ -48,11 +54,17 @@
             <br>
 
             <div class="post-it green" id="positive">
+                <div class="center">
+                    <div class="thumbnail"></div>
+                </div>
                 <h3>Be POSITIVE</h3>
                 <p>Aim for the moon, and if you miss you might find a star</p>
             </div>
 
             <div class="post-it yellow">
+                <div class="center">
+                    <div class="thumbnail"></div>
+                </div>
                 <h3>WiFi Password:</h3>
                 <p>Ajb56=4iL?</p>
             </div>
