blog-post-update

--- a/exercises/blog-post/index.html
+++ b/exercises/blog-post/index.html
@@ -19,6 +19,8 @@
                 - September 10, 2025
             </p>
 
+            <div id="line-break"></div>
+
             <img 
                 src="images/StrangerThings.jpeg"
                 alt="stranger things poster"
