project-showcase-update

--- a/projects/product-showcase-site/index.html
+++ b/projects/product-showcase-site/index.html
@@ -31,7 +31,7 @@
 
         <div class="inner-container-white">
             <div class="content-container">
-                <h4>Chewy.com</h4>
+                <h4>Plush Halloween Toys</h4>
                 
                 <img 
                     id="top-image"
@@ -39,7 +39,10 @@
                     alt="halloween dog toys"
                 >
 
-                <h2>A FUR-ocious and WOOF-tastic Halloween Is Here!</h2>
+                <h2>
+                    All the plush! So your furry friend can have a 
+                    GHOSTLY friend!
+                </h2>
 
                 <p>
                     Shop our new Halloween collection, from toys to
