product-showcase-update

--- a/projects/product-showcase-site/index.html
+++ b/projects/product-showcase-site/index.html
@@ -25,7 +25,7 @@
                     the Halloween mood!
                 </p>
 
-                <a href="#">See More!</a>
+                <a href="#" class="white-button">See More</a>
             </div>
         </div>
 
@@ -50,7 +50,7 @@
                     the Halloween mood!
                 </p>
 
-                <a href="#">See More!</a>
+                <a href="#" class="orange-button">See More</a>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
                     the Halloween mood!
                 </p>
 
-                <a href="#">See More!</a>
+                <a href="#" class="white-button">See More</a>
             </div>
         </div>
 
@@ -85,11 +85,11 @@
                 
                 <img 
                     id="top-image"
-                    src="images/halloweendogtoyphoto.png"
+                    src="images/dogcostume.png"
                     alt="halloween dog toys"
                 >
 
-                <h2>A FUR-ocious and WOOF-tastic Halloween Is Here!</h2>
+                <h2>Don't Forget Costumes! Let your pet dress up too!</h2>
 
                 <p>
                     Shop our new Halloween collection, from toys to
@@ -97,7 +97,7 @@
                     the Halloween mood!
                 </p>
 
-                <a href="#">See More!</a>
+                <a href="#" class="orange-button">See More</a>
             </div>
         </div>
     </body>
