product-showcase-update

--- a/projects/product-showcase-site/index.html
+++ b/projects/product-showcase-site/index.html
@@ -81,7 +81,7 @@
 
         <div class="outer-container-white">
             <div class="content-container">
-                <h4>Chewy.com</h4>
+                <h4>Halloween Costumes</h4>
                 
                 <img 
                     id="top-image"
