--- a/exercises/side-by-side-recipes/index.html
+++ b/exercises/side-by-side-recipes/index.html
@@ -31,10 +31,29 @@
 
                     <h1>Dippy Eggs and Soldiers</h1>
 
-                    <!-- 
-                    add cook time/prep time div container here
-                    will become its own flexbox
-                    -->
+                    <div class="recipe-times">
+                        <span>
+                            <label>Prep Time:</label>
+                            5 Minutes
+                        </span>
+
+                        <span>
+                            <label>Cook Time:</label>
+                            15 Minutes
+                        </span>
+                    </div>
+
+                    <div class="recipe-times">
+                        <span>
+                            <label>Total Time:</label>
+                            20 Minutes
+                        </span>
+
+                        <span>
+                            <label>Yields:</label>
+                            2
+                        </span>
+                    </div>
 
                     <div>
                         <p>
@@ -49,15 +68,17 @@
                         </p>
                     </div>
 
-                    <a href="#">Jump to Recipe</a>
+                    <a href="#" class="button">Jump to Recipe</a>
 
                 </div>
             </div>
 
             <h2>You Might Also Like</h2>
 
+            <!-- flexbox container -->
             <div id="side-by-side-2">
 
+                <!-- flexbox item -->
                 <div class="images">
                     <img
                         src="images/recipe2.webp"
@@ -66,14 +87,16 @@
                     <h4>French Styled Mashed Potatoes</h4>
                 </div>
 
+                <!-- flexbox item -->
                 <div class="images">
                     <img
                         src="images/recipe3.jpg"
                         alt="food image"
                     >
-                    <h4>French Tacos (But Not Really Tscos)</h4>
+                    <h4>French Tacos (But Not Really Tacos)</h4>
                 </div>
 
+                <!-- flexbox item -->
                 <div class="images">
                     <img
                         src="images/recipe4.webp"
