--- a/exercises/site-scaffolding/home.html
+++ b/exercises/site-scaffolding/home.html
@@ -11,11 +11,11 @@
         <div id="navbar">
 
             <!-- navbar flex items -->
-             <a href="home.html" id="logo-container">Angel Ears</a>
-             <a href="news.html" class="list-items">News</a>
-             <a href="editorials.html" class="list-items">Editorials</a>
-             <a href="media.html" class="list-items">Media</a>
-             <a href="sign-up.html" class="cta-button">SUBSCRIBE NOW</a>
+            <a href="home.html" id="logo-container">Angel Ears</a>
+            <a href="news.html" class="list-items">News</a>
+            <a href="editorials.html" class="list-items">Editorials</a>
+            <a href="media.html" class="list-items">Media</a>
+            <a href="sign-up.html" class="cta-button">SUBSCRIBE NOW</a>
 
         </div>
 
@@ -23,7 +23,7 @@
             
             <div>
                 <h1>Home Page</h1>
-            <div>
+            </div>
 
         </div>
     </body>
