--- a/exercises/site-scaffolding/media.html
+++ b/exercises/site-scaffolding/media.html
@@ -11,7 +11,7 @@
         <div id="navbar">
 
             <!-- navbar flex items -->
-            <a href="home.html" id="logo-container">Angel Ears</a>
+            <a href="index.html" id="logo-container">Angel Ears</a>
             <a href="news.html" class="list-items">News</a>
             <a href="editorials.html" class="list-items">Editorials</a>
             <a href="media.html" class="list-items">Media</a>
