--- a/exercises/site-scaffolding/sign-up.html
+++ b/exercises/site-scaffolding/sign-up.html
@@ -11,12 +11,13 @@
         <div id="navbar">
 
             <!-- navbar flex items -->
-            <a href="index.html" id="logo-container">Angel Ears</a>
-            <a href="news.html" class="list-items">News</a>
-            <a href="editorials.html" class="list-items">Editorials</a>
-            <a href="media.html" class="list-items">Media</a>
-            <a href="sign-up.html" class="cta-button">SUBSCRIBE NOW</a>
-
+            <div class="single-column">
+                <a href="index.html" id="logo-container">Angel Ears</a>
+                <a href="news.html" class="list-items">News</a>
+                <a href="editorials.html" class="list-items">Editorials</a>
+                <a href="media.html" class="list-items">Media</a>
+                <a href="sign-up.html" class="cta-button">SUBSCRIBE NOW</a>
+            </div>
         </div>
 
         <div id="homepage-content">
