mebay-project-update

--- a/projects/mebay-product-page/index.html
+++ b/projects/mebay-product-page/index.html
@@ -4,15 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mebay Product Page</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="header">
-            <span id="m">m</span>
-            <span id="e">e</span>
-            <span id="b">b</span>
-            <span id="a">a</span>
-            <span id="y">y</span>
+            <span id="m">m</span><span id="e">e</span><span id="b">b</span><span id="a">a</span><span id="y">y</span>
         </div>
 
         <div id="three-columns">
@@ -87,6 +84,11 @@
                         as low as $26.93/mo with
                         <b>Klarna</b>
                         <a href="#">Learn More</a>
+                    </span>
+                    <p>
+                        Condition:
+                        <b>100% Restored</b>
+                    </p>
                 </div>
 
                 <div id="quantity">
