--- a/projects/mebay-product-page/index.html
+++ b/projects/mebay-product-page/index.html
@@ -82,12 +82,12 @@
                     <h5>or Best Offer</h5>
                     <span id="klarna-offer">
                         as low as $26.93/mo with
-                        <b>Klarna</b>
+                        <span>Klarna</span>
                         <a href="#">Learn More</a>
                     </span>
                     <p>
                         Condition:
-                        <b>100% Restored</b>
+                        <span>100% Restored</span>
                     </p>
                 </div>
 
