final-eval-update

--- a/projects/final-eval/index.html
+++ b/projects/final-eval/index.html
@@ -7,6 +7,49 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <!-- main div-single column -->
+         <div id="single-column">
+            
+            <div id="header">
+                <h4>John and Jane Smith's</h4>
+                <h1>SUPER BOWL LVIII</h1>
+                <h3>Extravaganza</h3>
+            </div>
+            <!-- flexbox container-->
+            <div id="main-content">
+                <!-- flexbox item -->
+                <div class="cards">
+                    <img 
+                        src="images/eaglesfootball.png"
+                        alt="eagles football helmet"
+                    >
+                    <h3>Philadelphia Eagles</h3>
+                </div>
+                <!-- flexbox item -->
+                <div id="vs">
+                    <span>VS</span>
+                </div>
+                <!-- flexbox item -->
+                <div class="cards">
+                    <img 
+                        src="images/saintsfootball.png"
+                        alt="saints football helmet"
+                    >
+                    <h3>New Orleans Saints</h3>
+                </div>
+            </div>
+            <div id="bottom-content">
+                <h4>Join us for the Ultimate Super Bowl Sunday Bash!</h4>
+                <h2>Sunday, Feb 11 2026 @ 6pm</h2>
+                <h3>
+                    We'll have hot food, cold drinks, and big screens; 
+                    all that's missing is you!
+                </h3>
+                <h3>The party will be at 1234 Main St, Anytown, USA</h3>
+                <a href="#" class="buttons">I Can Make It!</a>
+                <a href="#" class="buttons">I Can't, I Suck</a>
+                <h4 id="questions">Questions? Call 555.123.4567</h4>
+            </div>
+         </div>
     </body>
 </html>
