--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -15,39 +15,39 @@
         </div>
         <div id="layout">
             <div id="gallery">
-                <img 
+                <img class="tall"
                     src="images/adventure-1.jpg"
                     alt="two hikers hiking through mountains"
                 >
-                <img 
+                <img class="tall"
                     src="images/adventure-2.jpg"
                     alt="woman sitting on cliff over looking valleys"
                 >
-                <img 
+                <img class="small"
                     src="images/adventure-3.jpg"
                     alt="hiker overlooking canyons and mountains"
                 >
-                <img 
+                <img class="small"
                     src="images/adventure-4.jpg"
                     alt="inside of tent"
                 >
-                <img 
+                <img class="tall"
                     src="images/adventure-6.jpg"
                     alt="traveler standing on rock at the beach"
                 >
-                <img 
+                <img class="tall"
                     src="images/adventure-9.jpg"
                     alt="woman rock climbing"
                 >
-                <img 
+                <img class="tall"
                     src="images/adventure-7.jpg"
                     alt="hot air balloons in turkey"
                 >
-                <img 
+                <img class="tall"
                     src="images/adventure-8.jpg"
                     alt="solo kayaker"
                 >
-                <img 
+                <img class="small"
                     src="images/adventure-5.jpg"
                     alt="solo hiker looking up at waterfalls"
                 >
