exercises-responsive-layouts

--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -7,6 +7,13 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <div id="navbar">
+            <h2 id="logo">Roamantics</h2>
+                <a href="#">Destinations</a>
+                <a href="#">Experiences</a>
+                <a href="#">Book Trip</a>
+                <a href="#">About Us</a>
+        </div>
         <div id="hero-container">
             <div class="hero-content">
                 <h1>Adventure Awaits!</h1>
