--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -30,7 +30,7 @@
          
             <div id="hero">
                 <div class="hero-content">
-                    <a href="#jump-to-gallery">Photos by Jim</h2>
+                    <h2>Photos by Jim</h2>
                     <div id="hero-button">
                         <a href="#jump-to-gallery" id="cta-button">View Gallery</a>
                     </div>
